--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css link -->
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/resonsive.css">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
@@ -43,11 +44,12 @@
                 <button class="money-btn">100tk</button>
                 <button class="money-btn color">200tk</button>
                 <button class="money-btn">500tk</button>
+                <button class="money-btn">700tk</button>
                 <button class="money-btn">1000tk</button>
                 <button class="money-btn">5000tk</button>
                 <p><small>Others Amount(Taka)</small></p>
                 <hr>
-                <button class="btn-primary">Donate Now</button>
+                <button class="btn">Donate Now</button>
             </div>
         </div>
         <div class="our-donate-plane">
@@ -108,7 +110,7 @@
             </div>
            
         </div>
-        <div class="update-container">
+        <div class=" update-container">
             <h2 class="section-heading">Get My updates</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem explicabo aperiam facilis error dignissimos consectetur commodi esse rerum, amet, iste enim eligendi culpa cupiditate.</p>
             <div class="form">
